--- a/abstract.tex
+++ b/abstract.tex
@@ -1,8 +1,5 @@
 \documentclass[12pt]{amsart}
 
-% \usepackage{sectsty}
-\usepackage{graphicx}
-
 % % Margins
 % \topmargin=-0.45in
 % \evensidemargin=0in
@@ -18,7 +15,7 @@
 \begin{document}
 \maketitle	
 
-This seminar is a direct result of my dissertation work titled ``Load Balancing on the GPU,'' a GPU-based load-balancing programming model for fine-grained computations. This talk is intended as a tutorial, in which I will present lessons learned on how \emph{not} to program a GPU. I will focus on three key aspects: performance, program abstractions and software engineering, and together we will build the fastest General Matrix-Multiplication (GEMM) kernel, ever.
+This seminar is a direct result of my dissertation work titled ``Load Balancing on the GPU,'' a GPU-based load-balancing programming model for fine-grained computations. This talk is intended as a tutorial, in which I will present lessons learned on how \emph{not} to program a GPU. I will focus on three key aspects: performance, program abstractions and software engineering. Together we will build the fastest General Matrix-Multiplication (GEMM) kernel, ever.
 
 % Memory is everything, but load-balancing is better.
 % Beautiful abstractions and how to build them.
